# red2bot

./: .$arch.drawio.bkp  .gitignore  LICENSE  README.md  TODO  arch.drawio  ideas020825.txt  ini.sh  log  main.py  notes.yaml  pyproject.toml
api/: README.md  openapi.yaml
domain/bot/: deploy.sh  ini.sh  logini.sh  pyproject.toml
domain/bot/events/: chat.json  event.json  init.json
domain/bot/infra/: .terraform.lock.hcl  README.md  chats.tf  clear  ini.sh  lambda.tf  main.tf  outputs.tf  permissions.tf  products.tf  public.tf  test.json  variables.tf
domain/bot/src/: __init__.py  ai.py  data.py  dataaccess.py  exceptions.py  lambda_function.py  main.py  responses.py  router.py  service.py
domain/bot/src/red20bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
domain/bot/test/: conftest.py  test_chatstable.py  test_dataaccess.py  test_e2e.py  test_infra.py  test_main.py  test_router.py  test_service.py  test_smoke.py  test_unit.py
domain/dataingestion/fetchers/medar/: deploy.sh
domain/fetchers/medar/: README.md  fake_main.py  pyproject.toml  what?
domain/fetchers/medar/infra/main/: .terraform.lock.hcl  invoke_log  lambda.tf  log  outputs.tf  permissions.tf  products.tf  variables.tf
domain/fetchers/medar/src/: iface.py  impl.py  main.py  mock.py
infra/: .gitignore  main.tf  website.tf
schemas/: product.json
schemas/v1/: chat.json  product.json
swagger/: index.html
