
[project]
name = "red20bot"
version = "0.1.0"
description = "Serverless conversational bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3", 
]

[dependency-groups]
dev = [
    "boto3>=1.40.21",
    "ipdb>=0.13.13",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "isort",
    "black",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
addopts="--cov=src --cov-branch --cov-report=term-missing"



